* Modified opt-49-x_pvrinput.dpatch: Added CA-Id's 0xA1 and 0xA2, required by   pvrusb2 as suggested by Christian Jarczyk * Using txt2man for manpages that used docbook before * Upgraded opt-21_liemikuutio.dpatch to version 1.21 * Updated opt-48_pin.dpatch * Upgraded extensions patch to version 61 * Upgraded opt-39_noepg.dpatch to the patch taken from the vdr-noepgmenu   plugin 0.0.6.beta3 * Added opt-52_hard_link_cutter.dpatch SVN: trunk@6952

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: misc
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <tg@e-tobi.net>, Thomas Günther <tom@toms-cafe.de>
-Build-Depends: debhelper (>= 5), dpatch, xsltproc, docbook-xsl, libjpeg62-dev, libcap-dev,
- libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext
+Build-Depends: debhelper (>= 5), dpatch, libjpeg62-dev, libcap-dev,
+  libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext,
+  txt2man
 Standards-Version: 3.7.3
 Vcs-Svn: svn://svn.debian.org/pkg-vdr-dvb/vdr/vdr/trunk/
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-vdr-dvb/vdr/vdr/trunk/
