* Replaced usage of 'at' with 'nohupc -c "( command )" &gt;/dev/null 2&gt;&amp;1 &amp;' * Removed debian/linda SVN: trunk@7034

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Homepage: http://www.cadsoft.de/vdr/
 
 Package: vdr
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, psmisc, at
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, psmisc
 Recommends: lirc, ttf-bitstream-vera | ttf-freefont
 Provides: vdr-daemon, vdr-kbd, vdr-lirc, vdr-rcu
 Conflicts: vdr-daemon, vdr-kbd, vdr-lirc, vdr-rcu, vdradmin (<< 3.4.3)
