--- a/debian/rules
+++ b/debian/rules
@@ -67,8 +67,8 @@ build-stamp: configure-stamp
 
 	touch build-stamp
 
-patchlevel:
-	sh debian/patchlevel.sh make
+patchinfo:
+	python debian/patchcheck.py -c
 	sh debian/extract-patchinfo >debian/patchinfo
 
 clean: clean-patched unpatch
@@ -83,12 +83,11 @@ clean-patched:
 	rm -rf PLUGINS/lib
 	rm -f vdr-newplugin
 	rm -f debian/vdr-shutdown.wrapper
-	sh debian/patchlevel.sh clean
 	rm -f debian/patchinfo
 	rm -f $(MANPAGES)
 	dh_clean
 
-install: build patchlevel
+install: patchinfo build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
@@ -98,6 +97,9 @@ install: build patchlevel
 	for example in hello osddemo pictures servicedemo skincurses status svdrpdemo; do \
 	    install -D PLUGINS/src/$$example/README $(CURDIR)/debian/vdr-plugin-examples/usr/share/doc/vdr-plugin-examples/README.$$example; \
 	done
+	echo -n "vdr:Provides=" >> debian/vdr.substvars
+	cat debian/abi-version.txt >> debian/vdr.substvars
+
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -125,7 +127,6 @@ binary-indep: build install
 	dh_installdeb -i
 	dh_perl -i
 	dh_shlibdeps -i
-	sh debian/patchlevel.sh subst
 	dh_gencontrol -i
 	dh_md5sums -i
 	dh_builddeb -i
@@ -158,7 +159,6 @@ binary-arch: build install
 	dh_installdeb -a
 	dh_perl -a
 	dh_shlibdeps -a
-	sh debian/patchlevel.sh subst
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
