Fixed bashism in debian/rules (Closes: #491586) SVN: trunk@7195

--- a/debian/rules
+++ b/debian/rules
@@ -47,7 +47,7 @@ endif
 
 prepare-00list:
 	python debian/patchcheck.py -c $(PATCHCHECKOPTION)
-	[ "$(OOLIST)" == "debian/patches/00list" ] || \
+	[ "$(OOLIST)" = "debian/patches/00list" ] || \
 	  cp -b $(OOLIST) debian/patches/00list
 
 restore-00list:
