* Removed debconf note "VDR needs DVB kernel modules" - DVB modules should   be part of the standard kernel (at least on i386 and amd64). * Fixed debconf tonat ask to create /var/lib/video.00 if it already exists SVN: trunk@7532

--- a/debian/vdr.config
+++ b/debian/vdr.config
@@ -5,14 +5,8 @@ set -e
 # source debconf lib
 . /usr/share/debconf/confmodule
 
-
-# show info about vdr
-db_input high vdr/showinfo || true
-db_go
-
-
-# ask about creating /var/lib/video
-if [ ! -e /var/lib/video ]; then
+# ask about creating /var/lib/video.00
+if [ ! -e /var/lib/video.00 ]; then
     db_input high vdr/create_video_dir || true
     db_go
 fi
