--- a/debian/plugin-template/control
+++ b/debian/plugin-template/control
@@ -1,5 +1,5 @@
 Source: #PACKAGE#
-Section: misc
+Section: video
 Priority: extra
 Maintainer: #USERNAME# <#EMAIL#>
 Build-Depends: #BUILD_DEPS#, vdr-dev (>= #VDRVERSION#), gettext
@@ -13,4 +13,3 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${vdr:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
-XB-VDR-Patchlevel: ${vdr:Patchlevel}
