* Removed make-special-vdr.sh (Closes: #552638) * Added README.source SVN: trunk@8104

--- a/debian/plugin-template/rules
+++ b/debian/plugin-template/rules
@@ -1,4 +1,4 @@
-#! /bin/sh /usr/share/vdr-dev/make-special-vdr.sh
+#!/usr/bin/make -f
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 # include /usr/share/cdbs/1/rules/dpatch.mk
