* Added opt-22-x_edit_marks.dpatch * Adapted opt-48-x_pin.dpatch to vdr-workaround-broken-sys-capability patch * Updated opt-52_hard_link_cutter.dpatch to version 0.2.2 (fixes gcc 4.4 issue) * Added include links via debian/vdr-dev.links to make the include structure   compatible to vdr standards * Added -p to bash shebang line of init script, because this is needed,   if VDR calls the init script itself via a suid wrapper * Added linux-libc-dev to Depends of package vdr-dev (linux/dvb/*.h included   in header files, e.g. device.h) SVN: trunk@8429

--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Description: Video Disk Recorder for DVB cards
 
 Package: vdr-dev
 Architecture: all
-Depends: ${misc:Depends}, debhelper
+Depends: ${misc:Depends}, debhelper, linux-libc-dev
 Suggests: dh-make
 Description: Video Disk Recorder for DVB cards
  Video Disk Recorder (VDR) is a digital sat-receiver program using
