--- a/debian/rules
+++ b/debian/rules
@@ -68,13 +68,13 @@ build-stamp: configure-stamp
 
 	# build unoptimized vdr with debugging symbols
 	touch po/vdr.pot po/*.po
-	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes VDRDEBUG=yes DEB_BUILD_OPTIONS=nostrip,noopt
+	$(MAKE) all $(MAKE_OPTIONS) VDRDEBUG=yes DEB_BUILD_OPTIONS=nostrip,noopt
 	cp vdr vdr-dbg
 	$(MAKE) -o .dependencies clean $(MAKE_OPTIONS)
 
 	# build "productive" vdr
 	touch po/vdr.pot po/*.po
-	$(MAKE) all $(MAKE_OPTIONS) BUILDVDR=yes
+	$(MAKE) all $(MAKE_OPTIONS)
 	ln -f vdr vdr-kbd
 
 	# plugins
@@ -176,7 +176,7 @@ binary-arch: build install
 #	dh_installinfo -a
 #	dh_undocumented -a
 	dh_installchangelogs -pvdr HISTORY
-	dh_installchangelogs -pvdr-plugin-sky PLUGINS/src/sky/HISTORY
+	dh_installchangelogs -pvdr-plugin-dvbsddevice PLUGINS/src/dvbsddevice/HISTORY
 	dh_installchangelogs -pvdr-plugin-examples
 	dh_link -a
 	dh_strip -a -Xvdr-dbg
