Update Vcs-* fields: Move packaging from svn to git

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Build-Depends: debhelper (>= 5), dpatch, libjpeg62-dev, libcap2-dev | libcap-dev
   libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext,
   txt2man, python, linux-libc-dev (>= 2.6.29), libfribidi-dev
 Standards-Version: 3.9.1
-Vcs-Svn: svn://svn.debian.org/pkg-vdr-dvb/vdr/vdr/trunk/
-Vcs-Browser: http://svn.debian.org/wsvn/pkg-vdr-dvb/vdr/vdr/trunk/
+Vcs-Git: git://git.debian.org/pkg-vdr-dvb/vdr.git
+Vcs-Browser: http://git.debian.org/?p=pkg-vdr-dvb/vdr.git
 Homepage: http://www.tvdr.de/
 
 Package: vdr
