Dropped dpatch and use quilt for the patches - no PATCHVARIANT support anymore! To build VDR with a different set of patches, grab the appropriate branch from the Git.

--- a/debian/rules
+++ b/debian/rules
@@ -12,17 +12,6 @@ ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	INSTALL_PROGRAM += -s
 endif
 
-# To use dpatch uncomment the following line and set Build-Depends to dpatch
-DPATCH=yes
-
-ifdef DPATCH
-include /usr/share/dpatch/dpatch.make
-else
-patch:
-patch-stamp:
-unpatch:
-endif
-
 TXT2MANPAGES = debian/vdr-dbg.1
 MANPAGES = debian/vdrdbg-buildpackage.1 debian/debugvdr.1 debian/vdrleaktest.1
 
@@ -37,28 +26,16 @@ $(TXT2MANPAGES): %.1: %.1.txt
 	cat $< | grep -v "^###" | \
 	  eval "`cat $< | grep "^### txt2man" | sed "s/### //"`" >$@
 
-OOLIST := debian/patches/00list
 ABIVERSION := debian/abi-version
-ifdef PATCHVARIANT
-    OOLIST := $(OOLIST).$(PATCHVARIANT)
-    ABIVERSION := $(ABIVERSION).$(PATCHVARIANT)
-    PATCHCHECKOPTION := -p $(PATCHVARIANT)
-endif
 
-prepare-00list:
+check-patches:
 	python debian/patchcheck.py -c $(PATCHCHECKOPTION)
-	cmp -s $(OOLIST) debian/patches/00list || \
-	  cp -b --suffix=.save $(OOLIST) debian/patches/00list
-
-restore-00list:
-	[ ! -e debian/patches/00list.save ] || \
-	  mv debian/patches/00list.save debian/patches/00list
 
 accept-patches:
 	python debian/patchcheck.py -u $(PATCHCHECKOPTION)
 
 configure: configure-stamp
-configure-stamp: prepare-00list patch-stamp
+configure-stamp: check-patches
 	dh_testdir
 	touch configure-stamp
 
@@ -93,8 +70,7 @@ build-stamp: configure-stamp
 patchinfo:
 	sh debian/extract-patchinfo >debian/patchinfo
 
-clean: clean-patched unpatch restore-00list
-clean-patched:
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
@@ -129,14 +105,6 @@ install: patchinfo build
 	echo -n "vdr:Provides=" >> debian/vdr.substvars
 	cat $(ABIVERSION) >> debian/vdr.substvars
 	install -m644 $(ABIVERSION) $(CURDIR)/debian/vdr-dev/usr/share/vdr-dev/abi-version
-ifdef PATCHVARIANT
-	mkdir -p $(CURDIR)/debian/vdr/usr/share/doc/vdr
-	mkdir -p $(CURDIR)/debian/vdr-dev/usr/share/doc/vdr-dev
-	grep ^opt- $(OOLIST) >$(CURDIR)/debian/vdr/usr/share/doc/vdr/optional-patches.txt
-	cp $(CURDIR)/debian/vdr/usr/share/doc/vdr/optional-patches.txt \
-	  $(CURDIR)/debian/vdr-dev/usr/share/doc/vdr-dev/optional-patches.txt
-endif
-
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -201,5 +169,4 @@ binary-arch: build install
 	dh_builddeb -a
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure \
-        clean-patched patch unpatch
+.PHONY: build clean binary-indep binary-arch binary install configure
