--- a/debian/rules
+++ b/debian/rules
@@ -48,9 +48,6 @@ build-arch-stamp: configure-stamp
 	# Backup po files
 	find PLUGINS po -name "*.po" -exec test ! -f {}.backup \; -exec cp {} {}.backup \;
 
-	# disable dvbhddevice
-	-mv PLUGINS/src/dvbhddevice PLUGINS/src/_dvbhddevice
-
 	# build unoptimized vdr with debugging symbols
 	$(MAKE) all $(MAKE_OPTIONS) VDRDEBUG=yes DEB_BUILD_OPTIONS=nostrip,noopt
 	cp vdr vdr-dbg
@@ -89,9 +86,6 @@ clean:
 	rm -f debian/vdr-shutdown.wrapper
 	rm -f debian/patchinfo
 	rm -f $(MANPAGES) $(TXT2MANPAGES)
-
-	# Restore dvbhddevice
-	-mv PLUGINS/src/_dvbhddevice PLUGINS/src/dvbhddevice
 
 	# Restore po files
 	find PLUGINS po -name "*.po" -exec test -f {}.backup \; -exec mv {}.backup {} \;
@@ -161,6 +155,7 @@ binary-arch: build install
 #	dh_undocumented -a
 	dh_installchangelogs -pvdr HISTORY
 	dh_installchangelogs -pvdr-plugin-dvbsddevice PLUGINS/src/dvbsddevice/HISTORY
+	dh_installchangelogs -pvdr-plugin-dvbhddevice PLUGINS/src/dvbhddevice/HISTORY
 	dh_installchangelogs -pvdr-plugin-examples
 	dh_link -a
 	dh_strip -a -Xvdr-dbg
