--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <etobi@debian.org>, Thomas Günther <tom@toms-cafe.de>
 Origin: ctvdr
-Build-Depends: debhelper (>= 7.0.50~), dpatch, libjpeg62-dev, libcap2-dev | libcap-dev,
+Build-Depends: debhelper (>= 7.0.50~), libjpeg62-dev, libcap2-dev | libcap-dev,
   libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext,
   txt2man, python, linux-libc-dev (>= 2.6.29), libfribidi-dev
 Standards-Version: 3.9.2
